# Financial.Web/src/api/types.ts
@@ -69,6 +69,10 @@ export type ReportingCurrencySettingDto = Schema<'ReportingCurrencySettingDTO'>
 export type SetReportingCurrencyEnabledRequestDto = Schema<'SetReportingCurrencyEnabledRequestDTO'>
 export type AssetPriceSnapshotDto = Schema<'AssetPriceSnapshotDTO'>
 export type AssetDetailsDto = Schema<'AssetDetailsDTO'>
+export type CostBasisMethod = Schema<'CostBasisMethod'>
+export type DisposalRecordStatus = Schema<'DisposalRecordStatus'>
+export type DisposalLotConsumptionDto = Schema<'DisposalLotConsumptionDTO'>
+export type DisposalRecordDto = Schema<'DisposalRecordDTO'>
 export type ArchiveAssetRequestDto = Schema<'ArchiveAssetRequestDTO'>
 export type MoveAssetRequestDto = Schema<'MoveAssetRequestDTO'>
 export type AssetAdminDto = Schema<'AssetAdminDTO'>
